...

@MainActor
enum PreviewController {
  // swiftlint:disable line_length
  static let kevin = Friend(firstName: "Kevin", lastName: "Earls", currency: "EUR", imageData: Data())
  static let martha = Friend(firstName: "Martha", lastName: "Hill", currency: "EUR", imageData: Data())
  static let amy = Friend(firstName: "Amy", lastName: "Costa", currency: "USD", imageData: Data())
  static let nancy = Friend(firstName: "Nancy", lastName: "Peterson", currency: "GBP", imageData: Data())
  static let patrick = Friend(firstName: "Patrick", lastName: "Riordan", currency: "USD", imageData: Data())

  static let paris = Trip(name: "Patrick's Paris Adventure", location: "Paris")
  static let portugal = Trip(name: "Street Art", location: "Portugal")

...
